--- a/index.ipynb
+++ b/index.ipynb
@@ -66,11 +66,7 @@
     "import requests\n",
     "\n",
     "# URL of your Google Drive database file (direct download link)\n",
-<<<<<<< HEAD
-    "url = 'https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN'\n",
-=======
-    "url = 'https://drive.google.com/uc?id=1A2B3C4D5E6F7G8H9I0J1K2L3M4N5O6P7'\n",
->>>>>>> 180418843b17d45ba1c18d1b65dc389e68cc9456
+    "url = \"https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN\"\n",
     "\n",
     "# Send a GET request to download the file\n",
     "response = requests.get(url)\n",
