--- a/index.ipynb
+++ b/index.ipynb
@@ -47,14 +47,21 @@
     "from IPython.display import display, Javascript\n",
     "\n",
     "def open_notebook(notebook_path):\n",
-    "    js = f\"window.open('.voila/render/{notebook_path}', '_self')\"\n",
+    "    js = f\"window.location.href = '.voila/render/{notebook_path}', '_self')\"\n",
     "    display(Javascript(js))\n",
     "\n",
     "sidebar = widgets.VBox([\n",
     "    widgets.Button(description=\"Análisis Descriptivo\", on_click=lambda b: open_notebook(\"visualization_notebooks/descriptive_analysis.ipynb\")),\n",
     "    widgets.Button(description=\"Análisis Exploratorio\", on_click=lambda b: open_notebook(\"visualization_notebooks/exploratory_analysis.ipynb\")),\n",
     "    widgets.Button(description=\"Análisis Predictivo\", on_click=lambda b: open_notebook(\"visualization_notebooks/predictive_analysis.ipynb\")),\n",
-    "])"
+    "])\n",
+    "\n",
+    "\n",
+    "# Main content area\n",
+    "main_content = widgets.VBox([widgets.Label(\"Contenido principal\")])\n",
+    "\n",
+    "# Display the sidebar and main content side-by-side\n",
+    "display(widgets.HBox([sidebar, main_content]))"
    ]
   },
   {
