--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -57,6 +57,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FUNCTIONS\n",
+    "\n",
+    "#Convert dict to Markdown table\n",
+    "def dict_to_markdown(data):\n",
+    "    headers= \"| \" + \" | \".join(data.keys()) + \" |\"\n",
+    "    separator = \"| \" + \" | \".join([\"---\"]*len(data)) + \" |\"\n",
+    "    rows = []\n",
+    "    for i in range(len(next(iter(data.values())))):\n",
+    "        row = \"| \" + \" | \".join(f\"{data[key][i]:,}\" if isinstance(data[key][i], float) else str(data[key][i])for key in data) + \" |\"\n",
+    "        rows.append(row)\n",
+    "    return \"\\n\".join([headers, separator] + rows)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,16 +173,6 @@
     "    'Salario máximo': [int(mean_salary_max), median_salary_max, float(mode_salary_max[0])],\n",
     "    'Salario mínimo': [int(mean_salary_min), median_salary_min, float(mode_salary_min[0])]\n",
     "}\n",
-    "\n",
-    "#Convert dict to Markdown table\n",
-    "def dict_to_markdown(data):\n",
-    "    headers= \"| \" + \" | \".join(data.keys()) + \" |\"\n",
-    "    separator = \"| \" + \" | \".join([\"---\"]*len(data)) + \" |\"\n",
-    "    rows = []\n",
-    "    for i in range(len(next(iter(data.values())))):\n",
-    "        row = \"| \" + \" | \".join(f\"{data[key][i]:,}\" if isinstance(data[key][i], float) else str(data[key][i])for key in data) + \" |\"\n",
-    "        rows.append(row)\n",
-    "    return \"\\n\".join([headers, separator] + rows)\n",
     "\n",
     "markdown_table = dict_to_markdown(cent_data)\n",
     "\n",
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -300,16 +309,6 @@
     "    'Medida': ['Promedio', 'Mediana', 'Moda'],\n",
     "    'Número de vistas': [mean_views, median_views, mode_views[0]],\n",
     "}\n",
-    "\n",
-    "#Convert dict to Markdown table\n",
-    "def dict_to_markdown(data):\n",
-    "    headers= \"| \" + \" | \".join(data.keys()) + \" |\"\n",
-    "    separator = \"| \" + \" | \".join([\"---\"]*len(data)) + \" |\"\n",
-    "    rows = []\n",
-    "    for i in range(len(next(iter(data.values())))):\n",
-    "        row = \"| \" + \" | \".join(f\"{data[key][i]:,}\" if isinstance(data[key][i], float) else str(data[key][i])for key in data) + \" |\"\n",
-    "        rows.append(row)\n",
-    "    return \"\\n\".join([headers, separator] + rows)\n",
     "\n",
     "markdown_table = dict_to_markdown(cent_data)\n",
     "\n",
@@ -374,10 +373,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'applications'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\Sarah\\Code\\ProyectoABD\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'applications'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m apps \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mapplications\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mdropna()\n",
+      "File \u001b[1;32mc:\\Users\\Sarah\\Code\\ProyectoABD\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\Sarah\\Code\\ProyectoABD\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'applications'"
+     ]
+    }
+   ],
+   "source": [
+    "apps = df['applications'].dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'apps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#mean apps\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m mean_apps \u001b[38;5;241m=\u001b[39m \u001b[43mapps\u001b[49m\u001b[38;5;241m.\u001b[39mmean()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#median apps\u001b[39;00m\n\u001b[0;32m      5\u001b[0m median_apps \u001b[38;5;241m=\u001b[39m apps\u001b[38;5;241m.\u001b[39mmedian()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'apps' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#mean apps\n",
+    "mean_apps = apps.mean()\n",
+    "\n",
+    "#median apps\n",
+    "median_apps = apps.median()\n",
+    "\n",
+    "#mode apps\n",
+    "mode_apps = apps.mode()\n",
+    "\n",
+    "cent_data = {\n",
+    "    'Medida': ['Promedio', 'Mediana', 'Moda'],\n",
+    "    'Número de vistas': [mean_apps, median_apps, mode_apps[0]],\n",
+    "}\n",
+    "\n",
+    "markdown_table = dict_to_markdown(cent_data)\n",
+    "\n",
+    "# Display Markdown table\n",
+    "\n",
+    "display(Markdown(markdown_table))"
+   ]
   },
   {
    "cell_type": "markdown",
