sidebar main content fix

--- a/index.ipynb
+++ b/index.ipynb
@@ -10,11 +10,8 @@
     "</div>\n",
     "\n",
     "*Narly Tatiana Cipagauta Mora* ncipagauta@unal.edu.co \n",
-    "\n",
     "*Karla Estefanía Murillo López* kamurillo@unal.edu.co \n",
-    "\n",
     "*Sarah Daniella Coral Zúñiga* scoralz@unal.edu.co  \n",
-    "\n",
     "*Stiven Leonardo Sánchez León* stsanchezl@unal.edu.co\n"
    ]
   },
@@ -57,8 +54,25 @@
     "])\n",
     "\n",
     "\n",
-    "# Main content area\n",
-    "main_content = widgets.VBox([widgets.Label(\"Contenido principal\")])\n",
+    "# --- Main Content ---\n",
+    "# Title, Subtitle and Introduction\n",
+    "title = widgets.HTML(\"\"\"\n",
+    "<div align=\"center\">\n",
+    "   <h1>Análisis del Mercado Laboral</h1>\n",
+    "   <h2>ofertas en Linkedin 2023 y 2024</h2>\n",
+    "</div>\n",
+    "\"\"\")\n",
+    "\n",
+    "# Author Info (Intro)\n",
+    "autores = widgets.HTML(\"\"\"\n",
+    "<p><strong>Narly Tatiana Cipagauta Mora</strong> - ncipagauta@unal.edu.co</p>\n",
+    "<p><strong>Karla Estefanía Murillo López</strong> - kamurillo@unal.edu.co</p>\n",
+    "<p><strong>Sarah Daniella Coral Zúñiga</strong> - scoralz@unal.edu.co</p>\n",
+    "<p><strong>Stiven Leonardo Sánchez León</strong> - stsanchezl@unal.edu.co</p>\n",
+    "\"\"\")\n",
+    "\n",
+    "# Combine title, subtitle, and intro in main content\n",
+    "main_content = widgets.VBox([title, autores])\n",
     "\n",
     "# Display the sidebar and main content side-by-side\n",
     "display(widgets.HBox([sidebar, main_content]))"
