--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -40,9 +40,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_id</th>\n",
+       "      <th>max_salary</th>\n",
+       "      <th>pay_period</th>\n",
+       "      <th>views</th>\n",
+       "      <th>med_salary</th>\n",
+       "      <th>min_salary</th>\n",
+       "      <th>applies</th>\n",
+       "      <th>original_listed_time</th>\n",
+       "      <th>expiry</th>\n",
+       "      <th>closed_time</th>\n",
+       "      <th>listed_time</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>normalized_salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>921716</td>\n",
+       "      <td>41600.0</td>\n",
+       "      <td>HOURLY</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35360.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1713397508000</td>\n",
+       "      <td>1715989508000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1713397508000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>38480.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1829192</td>\n",
+       "      <td>104000.0</td>\n",
+       "      <td>HOURLY</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>62400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1712857887000</td>\n",
+       "      <td>1715449887000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1712857887000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>83200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10998357</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>YEARLY</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1713277614000</td>\n",
+       "      <td>1715869614000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1713277614000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>55000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23221523</td>\n",
+       "      <td>175000.0</td>\n",
+       "      <td>YEARLY</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1712895812000</td>\n",
+       "      <td>1715487812000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1712895812000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>157500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35982263</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>YEARLY</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1713451943000</td>\n",
+       "      <td>1716043943000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1713451943000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>70000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     job_id  max_salary pay_period  views  med_salary  min_salary  applies  \\\n",
+       "0    921716     41600.0     HOURLY   20.0         NaN     35360.0      2.0   \n",
+       "1   1829192    104000.0     HOURLY    1.0         NaN     62400.0      NaN   \n",
+       "2  10998357     65000.0     YEARLY    8.0         NaN     45000.0      NaN   \n",
+       "3  23221523    175000.0     YEARLY   16.0         NaN    140000.0      NaN   \n",
+       "4  35982263     80000.0     YEARLY    3.0         NaN     60000.0      NaN   \n",
+       "\n",
+       "   original_listed_time         expiry  closed_time    listed_time currency  \\\n",
+       "0         1713397508000  1715989508000          NaN  1713397508000      USD   \n",
+       "1         1712857887000  1715449887000          NaN  1712857887000      USD   \n",
+       "2         1713277614000  1715869614000          NaN  1713277614000      USD   \n",
+       "3         1712895812000  1715487812000          NaN  1712895812000      USD   \n",
+       "4         1713451943000  1716043943000          NaN  1713451943000      USD   \n",
+       "\n",
+       "   normalized_salary  \n",
+       "0            38480.0  \n",
+       "1            83200.0  \n",
+       "2            55000.0  \n",
+       "3           157500.0  \n",
+       "4            70000.0  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_sql('SELECT * FROM clean_numerical_postings', conn)\n",
     "\n",
@@ -53,6 +202,8 @@
     "df = df[df['max_salary'] > 100]\n",
     "df = df[df['min_salary'] > 100]\n",
     "df = df[df['normalized_salary'] > 100]\n",
+    "\n",
+    "df.head()\n",
     "\n"
    ]
   },
@@ -373,50 +524,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'applications'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\Sarah\\Code\\ProyectoABD\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'applications'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m apps \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mapplications\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mdropna()\n",
-      "File \u001b[1;32mc:\\Users\\Sarah\\Code\\ProyectoABD\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mc:\\Users\\Sarah\\Code\\ProyectoABD\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'applications'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "apps = df['applications'].dropna()"
+    "apps = df['applies'].dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'apps' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#mean apps\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m mean_apps \u001b[38;5;241m=\u001b[39m \u001b[43mapps\u001b[49m\u001b[38;5;241m.\u001b[39mmean()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#median apps\u001b[39;00m\n\u001b[0;32m      5\u001b[0m median_apps \u001b[38;5;241m=\u001b[39m apps\u001b[38;5;241m.\u001b[39mmedian()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'apps' is not defined"
-     ]
+     "data": {
+      "text/markdown": [
+       "| Medida | Número de aplicaciones |\n",
+       "| --- | --- |\n",
+       "| Promedio | 12 |\n",
+       "| Mediana | 3.0 |\n",
+       "| Moda | 1.0 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -431,7 +565,7 @@
     "\n",
     "cent_data = {\n",
     "    'Medida': ['Promedio', 'Mediana', 'Moda'],\n",
-    "    'Número de vistas': [mean_apps, median_apps, mode_apps[0]],\n",
+    "    'Número de aplicaciones': [int(mean_apps), median_apps, mode_apps[0]],\n",
     "}\n",
     "\n",
     "markdown_table = dict_to_markdown(cent_data)\n",
