--- a/index.ipynb
+++ b/index.ipynb
@@ -1,21 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div align=\"center\">\n",
-    "   <h1>Análisis del Mercado Laboral</h1>\n",
-    "   <h2>ofertas en Linkedin 2023 y 2024</h2>\n",
-    "</div>\n",
-    "\n",
-    "*Narly Tatiana Cipagauta Mora* ncipagauta@unal.edu.co \n",
-    "*Karla Estefanía Murillo López* kamurillo@unal.edu.co \n",
-    "*Sarah Daniella Coral Zúñiga* scoralz@unal.edu.co  \n",
-    "*Stiven Leonardo Sánchez León* stsanchezl@unal.edu.co\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -44,7 +29,7 @@
     "from IPython.display import display, Javascript\n",
     "\n",
     "def open_notebook(notebook_path):\n",
-    "    js = f\"window.location.href = '.voila/render/{notebook_path}', '_self')\"\n",
+    "    js = f\"window.location.href = '.voila/render/{notebook_path}'\"\n",
     "    display(Javascript(js))\n",
     "\n",
     "sidebar = widgets.VBox([\n",
