--- a/index.ipynb
+++ b/index.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "def open_notebook(notebook_path):\n",
     "    js = f\"window.location.href = '.voila/render/{notebook_path}'\"\n",
+    "    print(js)\n",
     "    display(Javascript(js))\n",
     "\n",
     "sidebar = widgets.VBox([\n",
