--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis Descriptivo\n",
-    "\n",
-    "a continuación se presenta una descripción y visualización de los datos"
+    "<div align=\"center\">\n",
+    "   <h1>Análisis Descriptivo</h1>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se presenta una descripción y visualización de los datos"
    ]
   },
   {
