--- a/visualization_notebooks/predictive_analysis.ipynb
+++ b/visualization_notebooks/predictive_analysis.ipynb
@@ -4,8 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis Predictivo\n",
+    "<div align=\"center\">\n",
+    "   <h1>Análisis Predictivo</h1>\n",
     "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "do linear regression on salary or maybe number of postings?"
    ]
   },
