--- a/index.ipynb
+++ b/index.ipynb
@@ -1,42 +1,63 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "   <h1>Análisis del Mercado Laboral</h1>\n",
+    "   <h2>ofertas en Linkedin 2023 y 2024</h2>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p><strong>Narly Tatiana Cipagauta Mora</strong> - ncipagauta@unal.edu.co</p>\n",
+    "<p><strong>Karla Estefanía Murillo López</strong> - kamurillo@unal.edu.co</p>\n",
+    "<p><strong>Sarah Daniella Coral Zúñiga</strong> - scoralz@unal.edu.co</p>\n",
+    "<p><strong>Stiven Leonardo Sánchez León</strong> - stsanchezl@unal.edu.co</p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:9: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "<>:10: SyntaxWarning: invalid escape sequence '\\e'\n",
-      "<>:11: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "<>:9: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "<>:10: SyntaxWarning: invalid escape sequence '\\e'\n",
-      "<>:11: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "C:\\Users\\Sarah\\AppData\\Local\\Temp\\ipykernel_1104\\4127183338.py:9: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  widgets.Button(description=\"Análisis Descriptivo\", on_click=lambda b: open_notebook(\"visualization_notebooks\\descriptive_analysis.ipynb\")),\n",
-      "C:\\Users\\Sarah\\AppData\\Local\\Temp\\ipykernel_1104\\4127183338.py:10: SyntaxWarning: invalid escape sequence '\\e'\n",
-      "  widgets.Button(description=\"Análisis Exploratorio\", on_click=lambda b: open_notebook(\"visualization_notebooks\\exploratory_analysis.ipynb\")),\n",
-      "C:\\Users\\Sarah\\AppData\\Local\\Temp\\ipykernel_1104\\4127183338.py:11: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "  widgets.Button(description=\"Análisis Predictivo\", on_click=lambda b: open_notebook(\"visualization_notebooks\\predictive_analysis.ipynb\")),\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f5971b8b5e204f9bbc1407aa4af155f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(Button(description='Cargar Datos', style=ButtonStyle()), Button(description='Aná…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display, Javascript\n",
+    "import subprocess\n",
     "\n",
     "def open_notebook(notebook_path):\n",
-    "    js = f\"window.location.href = '.voila/render/{notebook_path}'\"\n",
-    "    print(js)\n",
-    "    display(Javascript(js))\n",
+    "    # Command to run the second notebook with Voila\n",
+    "    command = [\"voila\", notebook_path]\n",
+    "    \n",
+    "    # Start the second Voila notebook in a new process\n",
+    "    subprocess.Popen(command)\n",
     "\n",
     "sidebar = widgets.VBox([\n",
+    "    widgets.Button(description=\"Cargar Datos\", on_click=lambda b: open_notebook(\"load_database.ipynb\")),\n",
     "    widgets.Button(description=\"Análisis Descriptivo\", on_click=lambda b: open_notebook(\"visualization_notebooks/descriptive_analysis.ipynb\")),\n",
     "    widgets.Button(description=\"Análisis Exploratorio\", on_click=lambda b: open_notebook(\"visualization_notebooks/exploratory_analysis.ipynb\")),\n",
     "    widgets.Button(description=\"Análisis Predictivo\", on_click=lambda b: open_notebook(\"visualization_notebooks/predictive_analysis.ipynb\")),\n",
+    "    widgets.Button(description=\"Conclusiones\", on_click=lambda b: open_notebook(\"visualization_notebooks/conclusions.ipynb\")),\n",
     "])\n",
     "\n",
     "\n",
@@ -49,40 +70,9 @@
     "</div>\n",
     "\"\"\")\n",
     "\n",
-    "# Author Info (Intro)\n",
-    "autores = widgets.HTML(\"\"\"\n",
-    "<p><strong>Narly Tatiana Cipagauta Mora</strong> - ncipagauta@unal.edu.co</p>\n",
-    "<p><strong>Karla Estefanía Murillo López</strong> - kamurillo@unal.edu.co</p>\n",
-    "<p><strong>Sarah Daniella Coral Zúñiga</strong> - scoralz@unal.edu.co</p>\n",
-    "<p><strong>Stiven Leonardo Sánchez León</strong> - stsanchezl@unal.edu.co</p>\n",
-    "\"\"\")\n",
-    "\n",
-    "# Combine title, subtitle, and intro in main content\n",
-    "main_content = widgets.VBox([title, autores])\n",
     "\n",
     "# Display the sidebar and main content side-by-side\n",
-    "display(widgets.HBox([sidebar, main_content]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "\n",
-    "# URL of your Google Drive database file (direct download link)\n",
-    "url = \"https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN\"\n",
-    "\n",
-    "# Send a GET request to download the file\n",
-    "response = requests.get(url)\n",
-    "\n",
-    "# Save the content to a local file (in the Binder container or local disk)\n",
-    "with open('linkedindatabase.db', 'wb') as f:\n",
-    "    f.write(response.content)\n",
-    "\n",
-    "print(\"Base de datos disponible!\")"
+    "display(widgets.VBox([sidebar]))"
    ]
   }
  ],
