--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -591,10 +591,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#get job duration values\n",
+    "def get_duration(row):\n",
+    "    if pd.notna(row['closed_time']):\n",
+    "        return row['closed_time'] - row['listed_time']\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "df['duration'] = df.apply(get_duration, axis=1)\n",
+    "duration = df['duration'].dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1.300000e+02\n",
+       "mean     2.998831e+06\n",
+       "std      4.619810e+06\n",
+       "min      1.100000e+04\n",
+       "25%      3.257500e+05\n",
+       "50%      1.091000e+06\n",
+       "75%      3.528750e+06\n",
+       "max      2.136800e+07\n",
+       "Name: duration, dtype: float64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duration.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "| Medida | Duración de la publicación |\n",
+       "| --- | --- |\n",
+       "| Promedio | 34d17h0 |\n",
+       "| Mediana | 12d15h3 |\n",
+       "| Moda | 0d18h36 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#mean duration of postings\n",
+    "mean_duration = duration.mean()\n",
+    "\n",
+    "#median duration of postings\n",
+    "median_duration = duration.median()\n",
+    "\n",
+    "#mode duration of postings\n",
+    "mode_duration = duration.mode()\n",
+    "\n",
+    "#convert unix time to days, hours, minutes\n",
+    "def convert_time(duration):\n",
+    "    days = duration//86400\n",
+    "    hours = (duration%86400)//3600\n",
+    "    minutes = (duration%3600)//60\n",
+    "    return days, hours, minutes\n",
+    "\n",
+    "\n",
+    "cent_data = {\n",
+    "    'Medida': ['Promedio', 'Mediana', 'Moda'],\n",
+    "    'Duración de la publicación': [mean_duration, median_duration, mode_duration[0]],\n",
+    "}\n",
+    "\n",
+    "def dict_to_datetime_markdown(data):\n",
+    "    headers= \"| \" + \" | \".join(data.keys()) + \" |\"\n",
+    "    separator = \"| \" + \" | \".join([\"---\"]*len(data)) + \" |\"\n",
+    "    rows = []\n",
+    "    for i in range(len(next(iter(data.values())))):\n",
+    "        row = \"| \" + \" | \".join(f\"{int(convert_time(data[key][i])[0])}d{int(convert_time(data[key][i])[1])}h{convert_time(int(data[key][i]))[2]}\" if isinstance(data[key][i], float) else str(data[key][i])for key in data) + \" |\"\n",
+    "        rows.append(row)\n",
+    "    return \"\\n\".join([headers, separator] + rows)\n",
+    "\n",
+    "markdown_table = dict_to_datetime_markdown(cent_data)\n",
+    "\n",
+    "# Display Markdown table\n",
+    "\n",
+    "display(Markdown(markdown_table))"
+   ]
   },
   {
    "cell_type": "code",
