categorical data in descriptive_analysis

--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,18 +200,21 @@
     }
    ],
    "source": [
-    "df = pd.read_sql('SELECT * FROM clean_numerical_postings', conn)\n",
+    "#DATAFRAMES CREATION\n",
     "\n",
-    "df = df[df['max_salary'] <= 10000000]\n",
-    "df = df[df['min_salary'] <= 10000000]\n",
-    "df = df[df['normalized_salary'] <= 10000000]\n",
+    "#numerical data\n",
+    "df_num = pd.read_sql('SELECT * FROM clean_numerical_postings', conn)\n",
     "\n",
-    "df = df[df['max_salary'] > 100]\n",
-    "df = df[df['min_salary'] > 100]\n",
-    "df = df[df['normalized_salary'] > 100]\n",
+    "df_num = df_num[df_num['max_salary'] <= 10000000]\n",
+    "df_num = df_num[df_num['min_salary'] <= 10000000]\n",
+    "df_num = df_num[df_num['normalized_salary'] <= 10000000]\n",
     "\n",
-    "df.head()\n",
-    "\n"
+    "df_num = df_num[df_num['max_salary'] > 100]\n",
+    "df_num = df_num[df_num['min_salary'] > 100]\n",
+    "df_num = df_num[df_num['normalized_salary'] > 100]\n",
+    "\n",
+    "#categorical data\n",
+    "df_cat = pd.read_sql('SELECT * FROM postings', conn)"
    ]
   },
   {
@@ -258,29 +261,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nor_salary_insights = df[df['normalized_salary'].notnull()]\n",
+    "nor_salary_insights = df_num[df_num['normalized_salary'].notnull()]\n",
     "nor_salary_insights = nor_salary_insights.sort_values(by='normalized_salary', ascending=False)\n",
     "nor_salary_insights = nor_salary_insights[nor_salary_insights['normalized_salary'] != 0]\n",
     "nor_salary_insights.rename(columns={'normalized_salary': 'salary'}, inplace=True)\n",
     "nor_salary_insights['category'] = 'normalized_salary'\n",
     "\n",
-    "max_salary_insights = df[df['max_salary'].notnull()]\n",
+    "max_salary_insights = df_num[df_num['max_salary'].notnull()]\n",
     "max_salary_insights = max_salary_insights.sort_values(by='max_salary', ascending=False)\n",
     "max_salary_insights = max_salary_insights[max_salary_insights['max_salary'] != 0]\n",
     "max_salary_insights.rename(columns={'max_salary': 'salary'}, inplace=True)\n",
     "max_salary_insights['category'] = 'max_salary'\n",
     "\n",
-    "min_salary_insights = df[df['min_salary'].notnull()]\n",
+    "min_salary_insights = df_num[df_num['min_salary'].notnull()]\n",
     "min_salary_insights = min_salary_insights.sort_values(by='min_salary', ascending=False)\n",
     "min_salary_insights = min_salary_insights[min_salary_insights['min_salary'] != 0]\n",
     "min_salary_insights.rename(columns={'min_salary': 'salary'}, inplace=True)\n",
     "min_salary_insights['category'] = 'min_salary'\n",
     "\n",
     "salary_combined = pd.concat([nor_salary_insights, max_salary_insights, min_salary_insights], ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Medidas de Centralización"
    ]
   },
   {
@@ -334,9 +344,46 @@
     "\n",
     "markdown_table = dict_to_markdown(cent_data)\n",
     "\n",
+    "\n",
+    "\n",
     "# Display Markdown table\n",
     "\n",
     "display(Markdown(markdown_table))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Medidas de Dispersión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análisis Intercuartílico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualización"
    ]
   },
   {
@@ -370,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +432,7 @@
     }
    ],
    "source": [
-    "salary = df['normalized_salary'].dropna()\n",
+    "salary = df_num['normalized_salary'].dropna()\n",
     "# Plotting the histogram\n",
     "plt.figure(figsize=(12, 8))\n",
     "plt.subplot(1, 2, 1)  # (rows, columns, index)\n",
@@ -424,11 +471,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "views = df['views'].dropna()"
+    "views = df_num['views'].dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Medidas de Centralización"
    ]
   },
   {
@@ -473,6 +527,41 @@
     "# Display Markdown table\n",
     "\n",
     "display(Markdown(markdown_table))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Medidas de Dispersión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análisis Intercuartílico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualización"
    ]
   },
   {
@@ -531,11 +620,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "apps = df['applies'].dropna()"
+    "apps = df_num['applies'].dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Medidas de Centralización"
    ]
   },
   {
@@ -586,12 +682,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Medidas de Dispersión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análisis Intercuartílico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualización"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Duración de la publicación"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,36 +740,15 @@
     "    else:\n",
     "        return None\n",
     "\n",
-    "df['duration'] = df.apply(get_duration, axis=1)\n",
-    "duration = df['duration'].dropna()"
+    "df_num['duration'] = df_num.apply(get_duration, axis=1)\n",
+    "duration = df_num['duration'].dropna()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 61,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    1.300000e+02\n",
-       "mean     2.998831e+06\n",
-       "std      4.619810e+06\n",
-       "min      1.100000e+04\n",
-       "25%      3.257500e+05\n",
-       "50%      1.091000e+06\n",
-       "75%      3.528750e+06\n",
-       "max      2.136800e+07\n",
-       "Name: duration, dtype: float64"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "duration.describe()"
+    "#### Medidas de Centralización"
    ]
   },
   {
@@ -696,11 +813,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Medidas de Dispersión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análisis Intercuartílico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualización"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#IMPORTANTE: CERRAR LA CONEXIÓN\n",
     "conn.close()"
    ]
   }
