--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -4,8 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis Exploratorio\n",
-    "maybe add some svd pca"
+    "<div align=\"center\">\n",
+    "   <h1>ANÁLISIS EXPLORATORIO</h1>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "maybe add some svd pca\n",
+    "\n",
+    "top 20 words in description(karen)\n",
+    "\n",
+    "top 20 bigrams in descriptiom (karen)\n",
+    "\n"
    ]
   },
   {
