--- a/visualization_notebooks/predictive_analysis.ipynb
+++ b/visualization_notebooks/predictive_analysis.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "   <h1>Análisis Predictivo</h1>\n",
-    "\n",
+    "   <h1>ANÁLISIS PREDICTIVO</h1>\n",
     "</div>"
    ]
   },
