--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -298,6 +298,15 @@
     "plt.yticks(rotation=0)\n",
     "plt.title('Matriz de Correlación: salario, duración, aplicaciones y vistas de las ofertas de trabajo')\n",
     "plt.show()"
+    {
+ "cell_type": "markdown",
+ "metadata": {},
+ "source": [
+  "### Análisis del gráfico de calor\n",
+  "Podemos observar las correlaciones entre el salario, la duración, las aplicaciones y las vistas de las ofertas de trabajo. Se destaca que la mayor correlación esta entre las aplicaciones y las visitas de las ofertas. Esto quiere decir que estan directamnete relacionadas la cantidad de aplicaciones y las visualizaciones de la oferta"
+ ]
+}
+
    ]
   },
   {
