--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -268,6 +268,15 @@
      "metadata": {},
      "output_type": "display_data"
     }
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los salarios tienden a concentrarse en valores bajos y medianos, con pocas ofertas de trabajo que superan los 400k dólares.\n",
+    "Hay algunos valores extremos en la parte derecha, lo que indica que existen salarios significativamente más altos, pero en menor cantidad.\n",
+    "La distribución sugiere que el mercado laboral tiene una gran cantidad de ofertas con salarios relativamente bajos, mientras que los salarios más altos son menos frecuentes."
+   ]
+  },
    ],
    "source": [
     "plt.figure(figsize=(15, 6))\n",
