análisis histograma y diagrama de caja

--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -353,6 +353,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "El histograma sugiere que la mayoría de los salarios se concentran en un rango específico, pero hay presencia de valores extremos.\n",
+    "El diagrama de caja confirma la presencia de valores atípicos y muestra la mediana y los cuartiles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visitas"
    ]
   },
