análisis gráfica salario vs tamaño de empresa

--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -801,6 +801,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La mediana de los salarios no varía significativamente entre diferentes tamaños de empresa.\n",
+    "Hay muchos valores atípicos, lo que indica que algunos empleados en empresas de cualquier tamaño pueden recibir salarios considerablemente más altos.\n",
+    "Aunque se podría esperar que empresas más grandes pagaran mejor, este gráfico sugiere que la variabilidad dentro de cada grupo es alta y que el tamaño de la empresa no es necesariamente un indicador claro del salario."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 153,
    "metadata": {},
