análisis gráfica experiencia laboral.ipynb

--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -861,7 +861,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#"
+    "La mayoría de las ofertas de empleo están dirigidas a personas con experiencia media o en su primer empleo, lo que sugiere una alta demanda en estos niveles.\n",
+    "Las oportunidades para roles directivos o ejecutivos son mucho más limitadas, lo cual es esperable, ya que estos puestos requieren más experiencia y son menos comunes.\n",
+    "Las pasantías (Internship) son escasas, lo que podría indicar una menor oferta de oportunidades para estudiantes o recién graduados.\n",
+    "Este patrón sugiere que las empresas buscan principalmente talento joven y personas con experiencia intermedia, mientras que los roles de alto nivel son menos accesibles."
    ]
   },
   {
