análisis gráfica salario por habilidad

--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -522,6 +522,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las habilidades mejor remuneradas son las relacionadas con el área Legal, Training, Educación e Ingeniería, con salarios promedio significativamente más altos que el resto.\n",
+    "Habilidades técnicas y especializadas como Tecnología de la Información y Cuidado de la Salud también tienen salarios altos en comparación con otras áreas.\n",
+    "Habilidades en gestión y negocios, como Consultoría, Estrategia/Planificación, Gestión de Producto y Ventas, tienen salarios medianamente altos.\n",
+    "Las habilidades peor remuneradas incluyen Atención al Cliente, Administración y Producción, que tienen los salarios más bajos en la escala. Existe una brecha salarial considerable entre las habilidades mejor pagadas y las peor pagadas, lo que sugiere una diferencia en la demanda, especialización y formación requerida para cada área."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
