análisis gráfica habilidades mas solicitadas

--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -481,6 +481,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las habilidades más demandadas son Tecnología de la Información, Ventas, Gestión, Manufactura y Desarrollo de Negocios, lo que indica una alta necesidad de profesionales en estas áreas.\n",
+    "Las habilidades relacionadas con ingeniería, finanzas y auditoría también tienen una gran demanda, lo que sugiere la importancia de habilidades técnicas y estratégicas en el mercado laboral.\n",
+    "Atención al cliente y administración aparecen en la mitad de la lista, lo que indica que son necesarias, pero no tan críticas como otras habilidades más especializadas.\n",
+    "Las habilidades menos solicitadas incluyen Distribución, Compras, Publicidad y Producción, lo que puede reflejar menor demanda o automatización de ciertas tareas en estos sectores.\n",
+    "Existe una diferencia considerable entre las habilidades más y menos solicitadas, lo que podría indicar que algunas áreas están saturadas mientras que otras tienen una escasez de talento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
