analisis gráfica top empresas con mayor oferta

--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -376,6 +376,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Liberty Healthcare and Rehabilitation Services y The Job Network lideran en cantidad de ofertas de trabajo.\n",
+    "Empresas de tecnología y comunicaciones como TEKsystems y Insight Global tienen una presencia importante en el mercado laboral.\n",
+    "La cantidad de ofertas de empleo no necesariamente está relacionada con los salarios más altos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Industrias"
    ]
   },
