análisis gráfica top empresas con mayor salario

--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -340,6 +340,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DigiDoc, Inc. dba Public Sector Solutions Group ofrece los salarios más altos, superando los 200M.\n",
+    "Empresas como Eastridge Workforce Solutions y EOX Vantage también destacan con salarios elevados.\n",
+    "La disparidad en los salarios entre las empresas sugiere diferencias en industrias o tipos de cargos ofrecidos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
