--- a/visualization_notebooks/bibliografía.ipynb
+++ b/visualization_notebooks/bibliografía.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "www.kaggle.com, "LinkedIn Job Postings (2023 - 2024)" s/f. [En línea]. Disponible en: https://www.kaggle.com/datasets/arshkon/linkedin-job-postings."
+    "www.kaggle.com, \"LinkedIn Job Postings (2023 - 2024)\" s/f. [En línea]. Disponible en: https://www.kaggle.com/datasets/arshkon/linkedin-job-postings."
    ]
   }
  ],
