--- a/visualization_notebooks/exploratory_analysis.ipynb
+++ b/visualization_notebooks/exploratory_analysis.ipynb
@@ -13,11 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "maybe add some svd pca\n",
-    "\n",
-    "top 20 words in description(karen)\n",
-    "\n",
-    "top 20 bigrams in descriptiom (karen)\n",
+    "A continuación se presentan algunos resultados del análisis exploratorio de la base de datos\n",
     "\n"
    ]
   },
@@ -38,7 +34,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DATABASE LOADING\n",
+    "\n",
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "file_path = os.path.join(os.getcwd(),r\"linkedindatabase.db\")\n",
+    "\n",
+    "if not os.path.exists(file_path):\n",
+    "    print('Database not ready. Loading...')\n",
+    "    try:\n",
+    "        # URL of your Google Drive database file (direct download link)\n",
+    "        url = \"https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN\"\n",
+    "        # Send a GET request to download the file\n",
+    "        response = requests.get(url)\n",
+    "        # Save the content to a local file (in the Binder container or local disk)\n",
+    "        with open('linkedindatabase.db', 'wb') as f:\n",
+    "            f.write(response.content)\n",
+    "        print(\"Database available!\")\n",
+    "    except Exception as e:\n",
+    "        print(\"Failed to fetch database: {e}\")\n",
+    "else:\n",
+    "    print('Database already loaded!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +78,8 @@
    "source": [
     "#DATABASE CONNECTION\n",
     "\n",
-    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
+    "file_path = r\"linkedindatabase.db\"\n",
+    "#file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
     "conn = sqlite3.connect(file_path)\n",
     "\n",
     "print(\"Opened database successfully\")"
