--- a/visualization_notebooks/predictive_analysis.ipynb
+++ b/visualization_notebooks/predictive_analysis.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "do linear regression on salary or maybe number of postings?"
+    "A continuación se presenta el análisis predictivo"
    ]
   },
   {
@@ -37,8 +37,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DATABASE CONNECTION\n",
+    "import os\n",
+    "import requests\n",
     "\n",
+    "file_path = os.path.join(os.getcwd(),r\"linkedindatabase.db\")\n",
+    "\n",
+    "if not os.path.exists(file_path):\n",
+    "    print('Database not ready. Loading...')\n",
+    "    try:\n",
+    "        # URL of your Google Drive database file (direct download link)\n",
+    "        url = \"https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN\"\n",
+    "        # Send a GET request to download the file\n",
+    "        response = requests.get(url)\n",
+    "        # Save the content to a local file (in the Binder container or local disk)\n",
+    "        with open('linkedindatabase.db', 'wb') as f:\n",
+    "            f.write(response.content)\n",
+    "        print(\"Database available!\")\n",
+    "    except Exception as e:\n",
+    "        print(\"Failed to fetch database: {e}\")\n",
+    "else:\n",
+    "    print('Database already loaded!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DATABASE CONNECTION\n",
+    "#file_path = r\"linkedindatabase.db\"\n",
     "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
     "conn = sqlite3.connect(file_path)"
    ]
