--- a/visualization_notebooks/descriptive_analysis.ipynb
+++ b/visualization_notebooks/descriptive_analysis.ipynb
@@ -41,7 +41,9 @@
     "import os\n",
     "import requests\n",
     "\n",
-    "file_path = os.path.join(os.getcwd(),r\"linkedindatabase.db\")\n",
+    "#file_path = os.path.join(os.getcwd(),r\"linkedindatabase.db\")\n",
+    "\n",
+    "file_path = r\"linkedindatabase.db\"\n",
     "\n",
     "if not os.path.exists(file_path):\n",
     "    print('Database not ready. Loading...')\n",
