--- a/load_database.ipynb
+++ b/load_database.ipynb
@@ -6,19 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "\n",
-    "# URL of your Google Drive database file (direct download link)\n",
-    "url = \"https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN\"\n",
-    "\n",
-    "# Send a GET request to download the file\n",
-    "response = requests.get(url)\n",
-    "\n",
-    "# Save the content to a local file (in the Binder container or local disk)\n",
-    "with open('linkedindatabase.db', 'wb') as f:\n",
-    "    f.write(response.content)\n",
-    "\n",
-    "print(\"Base de datos disponible!\")"
+    "def load_db():\n",
+    "    import os\n",
+    "    import requests\n",
+    "    \n",
+    "    #file_path = os.path.join(os.getcwd(),r\"linkedindatabase.db\")\n",
+    "    file_path = r\"linkedindatabase.db\"\n",
+    "    \n",
+    "    if not os.path.exists(file_path):\n",
+    "        print('Database not ready. Loading...')\n",
+    "        try:\n",
+    "            # URL of your Google Drive database file (direct download link)\n",
+    "            url = \"https://drive.google.com/uc?id=1e_PSowuukgifVA7rzqkvhDuCud-YDxtN\"\n",
+    "            # Send a GET request to download the file\n",
+    "            response = requests.get(url)\n",
+    "            # Save the content to a local file (in the Binder container or local disk)\n",
+    "            with open('linkedindatabase.db', 'wb') as f:\n",
+    "                f.write(response.content)\n",
+    "            print(\"Database available!\")\n",
+    "        except Exception as e:\n",
+    "            print(\"Failed to fetch database: {e}\")\n",
+    "    else:\n",
+    "        print('Database already loaded!')"
    ]
   }
  ],
