--- a/visualization_notebooks/predictive_analysis.ipynb
+++ b/visualization_notebooks/predictive_analysis.ipynb
@@ -80,8 +80,9 @@
    "outputs": [],
    "source": [
     "#DATABASE CONNECTION\n",
-    "file_path = r\"linkedindatabase.db\"\n",
-    "#file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
+    "\n",
+    "#file_path = r\"linkedindatabase.db\"\n",
+    "file_path = r\"C:\\Users\\Sarah\\Code\\ProyectoABD\\database\\linkedindatabase.db\"\n",
     "conn = sqlite3.connect(file_path)"
    ]
   },
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +223,7 @@
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "# Plot the historical data (March 20, 2024 - April 20, 2024)\n",
-    "plt.scatter(df_clean['listed_time'], y, color='grey', alpha=0.5, label='Historical Data')\n",
+    "plt.scatter(df_clean['listed_time'], y, color='grey', alpha=0.5, label='Datos Históricos')\n",
     "\n",
     "# Plot the predicted salary for May 2024 (as a point on the timeline)\n",
     "plt.scatter(pd.to_datetime('2024-05-01'), predicted_salary_may, color='red', label='Salario promedio proyectado para Mayo 2024', zorder=5)\n",
